--- a/app/assets/about.html
+++ b/app/assets/about.html
@@ -1,4 +1,4 @@
-!-- We don't need full layout in this file because this page will be parsed with Ajax. It is just enough to put here .navbar and .page-->
+<!-- We don't need full layout in this file because this page will be parsed with Ajax. It is just enough to put here .navbar and .page-->
  
 <!-- Top Navbar-->
 <div class="navbar">
