--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -6,10 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <!-- <link rel="stylesheet" href="css/app.css"> -->
-  <link rel="stylesheet" href="../app/styles/font-awesome.min.css">
-  <link rel="stylesheet" href="../app/styles/framework7.ios.min.css">
-  <link rel="stylesheet" href="../app/styles/framework7.ios.colors.min.css">
+  <link rel="stylesheet" href="css/app.css">
   <!-- Your app title -->
   <title>My App</title>
   <!-- Path to Framework7 iOS CSS theme styles-->
@@ -90,6 +87,7 @@
     </div>
   </div>
   <!-- <script src="cordova.js"></script> -->
+  <script src="js/vendor.js"></script>
   <script src="js/app.js"></script>
 </body>
 </html>
