--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -88,6 +88,6 @@
   </div>
   <!-- <script src="cordova.js"></script> -->
   <script src="js/vendor.js"></script>
-  <script src="js/app.js"></script>
+  <script src="js/app.js" onload="require('my-app')()"></script>
 </body>
 </html>
